# Learn_cmake

./: learn_cmake_notes.md
t1/: CMakeCache.txt
t2/: .CMakeLists.txt.swp  CMakeLists.txt  README
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.c
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.c
