LINK_DIRECTORIES(AFTER /home/red/Learn_projects/learn_cmake/test/lib)
INCLUDE_DIRECTORIES(AFTER /home/red/Learn_projects/learn_cmake/test/include/hello)
ADD_EXECUTABLE(newhello main.c)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
#find_library(HELLO_LIB NAMES hello PATHS "../../test/lib")
#MESSAGE(STATUS "HELLO_LIB=" ${HELLO_LIB})
TARGET_LINK_LIBRARIES(newhello libhello.so)
MESSAGE(STATUS ${CMAKE_SYSTEM})
MESSAGE(STATUS ${CMAKE_C_FLAGS})
MESSAGE(STATUS ${CMAKE_CXX_FLAGS})

ADD_TEST(mytest ${PROJECT_BINARY_DIR}/bin/newhello)


EXEC_PROGRAM(ls ARGS "${PROJECT_SOURCE_DIR}/src/*.c" OUTPUT_VARIABLE LS_OUTPUT RETURN_VALUE LS_RVALUE)
# MESSAGE(STATUS ${LS_RVALUE} ${PROJECT_SOURCE_DIR})
IF (NOT LS_RVALUE)
	MESSAGE(STATUS "ls result "${LS_OUTPUT})
ENDIF(NOT LS_RVALUE)

FILE(WRITE abc "messages to write")
FILE(READ abc ABC)
MESSAGE(STATUS "abcdefghi"${ABC})
