FIND_LIBRARY(CURL_PATH curl)
IF (CURL_PATH)
MESSAGE(STATUS "find libcurl " ${CURL_PATH})
ENDIF()
ADD_EXECUTABLE(curltest main.c)

# TARGET_LINK_LIBRARIES(curltest ${CURL_PATH})

FIND_PACKAGE(CURL)

IF(CURL_FOUND)
    MESSAGE(STATUS "find curl library")
    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
ELSE(CURL_FOUND)
    MESSAGE(FATAL_ERROR "CURL library not found")
ENDIF(CURL_FOUND)

